Add ecosystem stuff

--- a/content/65.ecosystem.md
+++ b/content/65.ecosystem.md
@@ -1,4 +1,4 @@
-## Extensions and Ecosystem
+## Ecosystem of Packages
 
 Several packages have been developed that utilize `yt` as an infrastructural component.
 In contrast to the analysis modules, which have typically been built as extensions of `yt`, these extensions utilize `yt` as a framework and typically only rely upon public APIs, often with no changes necessary to upstream `yt`.
@@ -12,8 +12,8 @@ In many ways, Trident is the first external package that utilizes `yt` to provid
 
 ### Powderday
 
-[@doi:10.1038/nature15383]
-[@doi:10.3847/1538-4365/abc487]
+Powderday [@doi:10.3847/1538-4365/abc487 ; @doi:10.1038/nature15383] is an open source package connecting `yt`, population synthesis modules and the monte carlo radiation transport code Hyperion [@doi:10.1051/0004-6361/201117150] to develop synthetic observations of galaxies from astrophysics simulations.
+Powderday uses `yt` to read and transform data, including high-fidelity gridding of SPH particles into an octree form, to prepare galaxy simulations to be processed.
 
 ### ytree
 
@@ -24,4 +24,12 @@ Connecting this to the raw, unprocessed data from the simulation (such as the un
 
 ### pyxsim
 
-### AstroBlend
+pyXSIM [@doi:10.25080/Majora-14bd3278-010] is a python package for simulating X-ray observations from astrophysical sources.
+It implements the PHOX algorithm [@doi:10.1111/j.1365-2966.2011.20278.x; @doi:10.1093/mnras/sts120] and is implemented to support grid-based codes, particle-based codes, and even data constructed from scratch in numpy arrays.
+pyXSIM has been used to create synthetic observations from current and upcoming space telescopes.
+
+### ytini
+
+While `yt` has functionality for volume rendering, it provides far from the scene-control, composition and camera positioning necessary for "cinematic visualization."
+The tool ytini [@doi:10.1088/1538-3873/aa51b3] serves as an intermediary between `yt` and the visualization platform Houdini, often used for special effects and visual arts in industry and professional production environments.
+ytini was developed to ease the process of converting data from simulation format into one suitable for production teams to utilize in Houdini and other visual effects software, and has been designed to enable deeper collaboration between researchers and visualization and outreach experts.
