Try to add frontend yaml and template to build

--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -1,40 +1,19 @@
 ## Data Formats and Frontends
 
+{##
+This template sets out the frontend information drawn from frontends.yaml.
+##}
 
+{% for frontend in frontends %}
 
-adaptahop
-ahf
-amrvac
-arepo
-art
-artio
-athena
-athena_pp
-boxlib
-chombo
-eagle
-enzo
-enzo_e
-exodus_ii
-fits
-flash
-gadget
-gadget_fof
-gamer
-gdf
-gizmo
-halo_catalog
-http_stream
-moab
-nc4_cm1
-open_pmd
-owls
-owls_subfind
-ramses
-rockstar
-sdf
-sph
-stream
-swift
-tipsy
-ytdata
+### {{frontend.name}}
+
+**Index Type:** {{frontend.index_type}}
+
+**Comments:** {{frontend.comments}}
+
+**Primary Citations:** {% for citation in frontend.citations %}{{citation}} {% endfor %}
+
+**Usage Citations:** {% for citation in frontend.usage_citations %} {{citation}} {% endfor %}
+
+{% endfor %}
