--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -8,7 +8,7 @@ This template sets out the frontend information drawn from frontends.yaml.
 
 ### {{frontend.name}}
 
-**Index Type:** {{frontend.index_type}}
+**Index Type:** {% for frontend_type in frontend.index_type %} {{frontend_type}} {% endfor %}
 
 **Comments:** {{frontend.comments}}
 
