put multiple citations in a single thing

--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -12,8 +12,8 @@ This template sets out the frontend information drawn from frontends.yaml.
 
 **Comments:** {{frontend.comments}}
 
-**Primary Citations:** {% for citation in frontend.citations %}[{{citation}}]{% endfor %}
+**Primary Citations:** [{% for citation in frontend.citations %}{{citation}} {% endfor %}]
 
-**Usage Citations:** {% for citation in frontend.usage_citations %} [{{citation}}] {% endfor %}
+**Usage Citations:** [{% for citation in frontend.usage_citations %} {{citation}} {% endfor %}]
 
 {% endfor %}
