Use proper jinja2 templating

--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -8,12 +8,12 @@ This template sets out the frontend information drawn from frontends.yaml.
 
 ### {{frontend.name}}
 
-**Index Type:** {% for frontend_type in frontend.index_type %} {{frontend_type}} {% endfor %}
+**Index Type:** {{ frontend.index_type | join(", ") }}
 
 **Comments:** {{frontend.comments}}
 
-**Primary Citations:** [{% for citation in frontend.citations %}{{citation}} {% endfor %}]
+**Primary Citations:** [{{ frontend.citations | join("; ") }}
 
-**Usage Citations:** [{% for citation in frontend.usage_citations %} {{citation}} {% endfor %}]
+**Usage Citations:** [{{ frontend.usage_citations | join("; ") }}
 
 {% endfor %}
