--- a/content/14.governance.md
+++ b/content/14.governance.md
@@ -6,4 +6,29 @@ The systems developed account for a number of important procedures, mostly relat
 
 This governance structure, however, serves as a process for the `yt` *project*, rather than just the software itself.
 Much like other software projects with community-building as core goals, the `yt` project encompasses the core package itself (largely the subject of this paper), affiliated software projects (such as @doi:10.21105/joss.01774 ) but also, crucially, the broader community and the spaces in which discussions, tutorials, inquiries and development take place.
+As such, the governance structure was designed to be more holistic than addressing so-called "Commit Privileges" and access control.
+
+There are several components of the yt governance structure that we highlight here, but direct the interested reader to our [governance source repository](https://github.com/yt-project/governance) for a more detailed understanding.
+
+### Conflicts of Interest
+
+`yt` project development is distributed across universities and organizations, where in some cases different members of the development team may find themselves collaborating, or even applying for similar funding or academic positions.
+To minimize real or perceived conflicts of interest among the community, a policy regarding conflicts of interest is applied to members of the `yt` steering committee.
+
+> It is expected that the Steering Committee Members will be
+> employed at a wide range of companies, universities and non-profit
+> organizations.
+> Because of this, it is possible that Members will have conflict
+> of interests.
+> Such conflict of interests include, but are not limited to:
+>
+> * Financial interests, such as investments, employment or contracting work, outside of The Project that may influence their work on The Project.
+> * Access to proprietary information of their employer that could potentially leak into their work with the Project.
+>
+> All members of the Steering Committee shall disclose to the rest of the Council any conflict of interest they may have.
+> Members with a conflict of interest in a particular issue may participate in Committee discussions on that issue, but must recuse themselves from voting on the issue.
+
+This also addresses the possibility of funded work conflicting with the development of `yt` as a whole, or project wellness.
+As of the time of writing, this policy has not been exercised, but providing it in writing will ensure that the conduct of the steering committee is appropriate.
+
 
