Start expanding group info

--- a/content/14.governance.md
+++ b/content/14.governance.md
@@ -31,4 +31,29 @@ To minimize real or perceived conflicts of interest among the community, a polic
 This also addresses the possibility of funded work conflicting with the development of `yt` as a whole, or project wellness.
 As of the time of writing, this policy has not been exercised, but providing it in writing will ensure that the conduct of the steering committee is appropriate.
 
+### Project Members and Groups
+
+Individuals interact with projects in different ways at different times; as careers progress and personal lives shift, the degree of engagement that one can expect will change as well.
+To reflect this, as well as to codify the different means by which people can participate in the community, the `yt` governance structure allows for "members" to transition between different levels of activity.
+
+The base level of "membership" in the `yt` project is that of "project members."
+This is, by design, a broad category of individuals who have demonstrated their willingness to participate in the community, either through participating in community discussions, helping other members, contributing code or documentation, or reviewing the contributions of others.
+The initial seed of the project members was chosen by a flat cutoff of 50 changesets included in the repository; since that time, members are nominated by other members and must receive at least three positive votes.
+This membership, unless either explicitly revoked (via five supporting member votes and a steering council vote) lasts for life, although may be transitioned into "emeritus" status.
+Within the "members" group, a set of several sub-groups are identified that follow a rough, orchard-like metaphor.
+
+The first of these groups is the **Fertilizer** group.
+(We whimsically note that the choice of name is not meant as a value judgment!)
+
+
+**Arboretum
+
+The "**greenhouse**" group is
+
+**Fallow Fields**
+
+**Emeritus**
+
+### Decision Making
+
 
