fill out groups

--- a/content/14.governance.md
+++ b/content/14.governance.md
@@ -42,17 +42,26 @@ The initial seed of the project members was chosen by a flat cutoff of 50 change
 This membership, unless either explicitly revoked (via five supporting member votes and a steering council vote) lasts for life, although may be transitioned into "emeritus" status.
 Within the "members" group, a set of several sub-groups are identified that follow a rough, orchard-like metaphor.
 
-The first of these groups is the **Fertilizer** group.
+The first of these groups is the **fertilizer** group.
 (We whimsically note that the choice of name is not meant as a value judgment!)
+This is the high-level organizer group, including the steering committee and any other leadership roles.
+This group tends to the growth of the community, ensuring that there are opportunities for new members, and that the project continues as expected.
+Explicitly identified in the governance structure is that this is a group meant to train new members and to facilitate its membership to grow and change over time.
 
+The **arboretum** is the largest group, and is the starting point for new members of the project.
+The arboretum includes all project members and steering committee members.
+This group facilitates and develops contributions to the code base, encouraging diversity of participation.
 
-**Arboretum
+The **greenhouse** group includes those new members of the project, who are still developing their participation but have contributed to the community (for instance with a bug fix or documentation enhancement.)
+Members of the greenhouse group do not necessarily have high-level project responsibilities, but are encouraged to seek involvement and participate in triage meetings and other discussions.
 
-The "**greenhouse**" group is
+In recognition that temporary obligations, changes in activity level and other interest migrations happen, there is a group entitled the **fallow fields** for members who wish to temporarily step back from their responsibilities.
+Many different reasons exist for stepping into the fallow fields -- burnout, new or enhanced work responsibilities, family or care duties, or even simply a desire to do other things.
+Transitioning to the fallow fields is not permanent, and participation in the project can either resume or the individual can choose to move on.
 
-**Fallow Fields**
-
-**Emeritus**
+Finally, we have designated a class of project members as **emeritus** (the only non-orchard name utilized!) for individuals who have moved on to other interests or activities.
+The yt project has had a number of individuals and contributors who have later gone on to work in industry or non-profits, or who simply have opted to leave the community.
+The emeritus designation is a manner by which their previous contributions can still be recognized and honored, while also recognizing that they are no longer active participants.
 
 ### Decision Making
 
