finish up governance section

--- a/content/14.governance.md
+++ b/content/14.governance.md
@@ -65,4 +65,12 @@ The emeritus designation is a manner by which their previous contributions can s
 
 ### Decision Making
 
+The majority of decisions in the yt project are small, day-to-day decisions about code quality, merging pull requests, how to respond to questions and other items for which it is typically quite easy to identify  a consensus.
+For those situations where consensus is not possible, deciding upon and implementing a course of action can be one of the more difficult issues in a project; members of the community each bring their own preferences, requirements, needs and desires to a project.
+These decisions might be regarding the future of specific areas of the project's code base -- for instance, "should the software volume rendering be split into a separate repository?" or "how should we decide the line to draw for excising old frontends?"
+Typically, the YTEP process is sufficient, even in cases where a consensus cannot be reached, as it allows a large amount of discussion.
+In cases where it cannot, the decision making process utilizes a multi-tier system of votes, including the YTEP and mailing list as venues.
+If a 2/3 majority is unable to be reached, the steering committee is allowed approximately a month to identify a consensus among themselves; failing this, a majority vote will be reached.
 
+While the full mechanism of the yt project decision making process has not been exercised in its entirety, its presence has provided a "safety net" for discussion.
+For further details, the [voting process](https://yt-project.github.io/governance/voting.html) section of the [governance documents](https://yt-project.github.io/governance/) lay out the steps, involved groups and timeline.
