--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -16,7 +16,10 @@ However, balancing the needs of a community requiring stable methods for analyzi
 In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
 We discuss the implications of this on sustainability in Section @sec:sustainability, and provide here a graph of the contributions over time.
 
-<div id="figure-commit-graph"></div>{#fig:commit-graph}
+<div id="figure-commit-graph"></div>
+![
+Commits to the source code as a function of time.
+](){#fig:commit-graph}
 
 <script>
 var commitGraphSpecification = {
