Comments from Desika

--- a/content/65.ecosystem.md
+++ b/content/65.ecosystem.md
@@ -14,6 +14,9 @@ In many ways, Trident is the first external package that utilizes `yt` to provid
 
 Powderday [@doi:10.3847/1538-4365/abc487 ; @doi:10.1038/nature15383] is an open source package connecting `yt`, population synthesis modules and the monte carlo radiation transport code Hyperion [@doi:10.1051/0004-6361/201117150] to develop synthetic observations of galaxies from astrophysics simulations.
 Powderday uses `yt` to read and transform data, including high-fidelity gridding of SPH particles into an octree form, to prepare galaxy simulations to be processed.
+Currently Powderday uses the Arepo, Enzo, Gadget, Gizmo, and Tipsy front ends to read in simulation results, and convert them to a common format in preparation for dust radiative transfer (using `unyt` to ensure common units).
+Plans are in place to employ the wide range of front ends available in yt to broaden the applicability of powderday to a wider range of galaxy simulations. 
+
 
 ### ytree
 
