--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -1,4 +1,4 @@
-## Visualization and Volume Rendering {#sec:vr}
+:close
 
 The primary method by which researchers interact with their data in `yt` is via visualization; from the standpoint of the library, however, this is a side-effect of the various analysis, regularization and data-processing algorithms that are implemented within `yt`.
 Nearly all of the visualization that is done using `yt` utilizes the matplotlib library for actual deposition of pixels into an image format, although all of the *input* to that deposition is conducted by `yt`.
@@ -37,14 +37,45 @@ Widgyts provides a browser-side Jupyterlab interface to the pixelization routine
 
 The volume rendering is based on classical concepts for rendering 3D objects, and relies on the notion of a scene, a camera and an object to render.
 The object to render can be any data container of supported AMR datasets (either patch-based and octree-based datasets).
-The implementation of the volume rendering is based on integrating a transfer function along the direction of ray.
+The implementation of the volume rendering is based on integrating a transfer function along individual "rays."
+By defining a traversal function, cells can be ordered and a sampling function and accumulation can be applied to them.
+Below, we describe the traversal operations, and then the different "sampling" operations that can be applied.
+
+Conceptually, it is easies to think about this as constructing a global "ordering" of the cells, and then an in-order application of the sampler function with affiliated ray-specific data storage.
+In reality, however, these operations are interleaved and decomposed to enable task- and data-based parallelism.
+Data is distributed to different processors wherever possible based on different decomposition strategies, and within the traversal algorithms OpenMP parallelism is utilized to allow for individual rays to be integrated simultaneously.
+
+#### Lenses for Volume Rendering
+
+In addition to specifying traversal algorithms, the software volume rendering in yt relies on the concept of "lenses."
+A lens, in yt terminology, is a descriptive object from which emanate the rays that are integrated.
+The traditional lens is that of the perspective projection, wherein a plane of rays are sent outward.
+The simplest lens, however, is that of a plane-parallel set of rays, each of which is emitted by an individual pixel with constant direction.
+Additional lenses yt provides include 
+  a stereo projection lens (for stereoscopic 3D volume rendering),
+  a fisheye lens (for hemispheric rendering suitable for planetarium domes),
+  a spherical lens (for spherical rendering suitable for full-sphere projections (such as for "$360^{\circ}$ YouTube videos),
+  and the stereoscopic spherical lens.
+
+Each of these lens objects provides a functional form of ray direction and origin.
+In some cases, an inverse function can be provided, which in some cases enables the traversal function to more intelligently check intersection and reduce computation time.
 
 #### Patch-based ray traversal
 
-TODO
+Unlike taking standard "projections" of datasets, the process of volume rendering requires that elements be traversed in order, accumulating values that may be reliant on *previous* values.
+While this is straightforward to implement for grids [@doi:10.1.1.42.3443], in situations where there are overlapping sets of values the process must be handled more carefully.
 
 <canvas id="vrFigure" style="width:100%;height:100%;min-height: 500px;" hidpi="true"></canvas>
 <script type="text/paperscript" canvas="vrFigure" src="images/volume_rendering/vr-figure.js"></script>
+
+To ensure that cells are traversed in-order, and to ensure that only the highest-resolution cells are used in cases where grids overlap, we decompose the grid hierarchy into a kD-tree.
+To construct the kD-tree, each grid at the root level is added to the tree.
+Wherever these grids include "child" grids (i.e., grids that include higher-resolution data that overlaps with the grids) a cutting plane is inserted in the kD-tree such that the child grid is isolated.
+This process is then applied recursively until all of the grids in the dataset (or its data subselection) have been added.
+By inserting cutting planes at child-grid boundaries, the tree can be specified to include only "leaf" node data, thus ensuring that any traversal will *only* include the highest-resolution data available, and thus can be traversed in order.
+
+kD-trees also provide so-called "viewpoint traversals," which allows the grids to be ordered in either front-to-back or back-to-front order.
+These traversals can also be ordered to allow for radially-emanating traversals, for such cases as hemispheric renderings.
 
 #### Octree ray traversal
 
@@ -74,7 +105,12 @@ Volume rendering of gas density isocontours around a galaxy in a cosmological zo
 
 #### Sampling functions
 
-TODO
+As a ray passes through each sampling point, we apply a sampling function.
+In the yt software volume renderer, these cython subclasses of the `ImageSampler` base class.
+Each defines a setup process and a sample process.
+Once a ray arrives at a sampling point (for instance, as it walks across a grid and encounters values) the sampler is called with the data it is accessing, information about the ray, the "enter" and "exit" parameters of the sample region, and the accumulated data so far.
+
+
 
 ### Hardware-accelerated Volume Rendering
 
