add some sampling function stuff

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -1,4 +1,3 @@
-:close
 
 The primary method by which researchers interact with their data in `yt` is via visualization; from the standpoint of the library, however, this is a side-effect of the various analysis, regularization and data-processing algorithms that are implemented within `yt`.
 Nearly all of the visualization that is done using `yt` utilizes the matplotlib library for actual deposition of pixels into an image format, although all of the *input* to that deposition is conducted by `yt`.
@@ -44,6 +43,8 @@ Below, we describe the traversal operations, and then the different "sampling" o
 Conceptually, it is easies to think about this as constructing a global "ordering" of the cells, and then an in-order application of the sampler function with affiliated ray-specific data storage.
 In reality, however, these operations are interleaved and decomposed to enable task- and data-based parallelism.
 Data is distributed to different processors wherever possible based on different decomposition strategies, and within the traversal algorithms OpenMP parallelism is utilized to allow for individual rays to be integrated simultaneously.
+Typically, multiple "sampling points" are identified within each element to be sampled; the default number is 5.
+We have found that the image quality improves somewhat as this number is increased, as the interpolation allows for finer-grained variation, but 5 is typically sufficient for all but the highest resolution data and highest-gradient data.
 
 #### Lenses for Volume Rendering
 
@@ -110,7 +111,47 @@ In the yt software volume renderer, these cython subclasses of the `ImageSampler
 Each defines a setup process and a sample process.
 Once a ray arrives at a sampling point (for instance, as it walks across a grid and encounters values) the sampler is called with the data it is accessing, information about the ray, the "enter" and "exit" parameters of the sample region, and the accumulated data so far.
 
+Each `ImageSampler` object implements a different method of integration through the volume.
+Below, we discuss each in turn.
+To do so, we apply the convention that our volume rendering ray-casting starts at a position defined by the parameter $t$, starting at the position $\mathbf{\vec{x}}(t_0) \equiv \mathbf{\vec{x}}_0$ and terminates at $\mathbf{\vec{x}}(t_1) \equiv \mathbf{\vec{x}}_1$.
+Field values are taken as $f(\mathbf{\vec{x}})$, and the distance through with a ray has passed is defined as the path length.
 
+##### Projection Sampler
+
+This sampler object conducts a simple integration through the domain.
+$$
+v(\mathbf{\vec{x}}(t_1)) = \int_{t_0}^{t_1} f(x, y, z) dl
+$$
+
+Because the sampling function includes no dependence on previous values, it can be sampled completely independently and out of order.
+This allows for much simpler data-based parallelism.
+There are two formulations of this sampler in yt; the first is a piecewise-linear interpolation scheme, wherein the field is assumed to be constant within each sampling volume.
+This method requires neither vertex-centered data *nor* multiple sampling points and is considerably faster to conduct.
+The second method available, which is the default, is that of an interpolated projection.
+This sampler requires vertex-centered data and utilizes multiple samples.
+Because the arithmetic is reasonably simple and the data can be supplied in any order, it is still reasonably fast to conduct.
+
+This sampler function operates independently of color channels, exclusively in floating-point space.
+This allows colormapping to be conducted at the end of the process and allows for high dynamic range beyond that typically enabled by RGBA channels.
+
+##### Transfer Function Sampler
+
+The transfer function sampler is the most complex of the sampling functions available in yt, as it affords the most flexibility.
+Unfortunately, this also results in a cumbersome and difficult-to-describe setup process, wherein the simple operations are straightforward to accomplish but the more complex operations are subject to trial-and-error.
+
+The transfer function sampler is designed for constructing images; as such, it provides integration for up to six channels of data.
+Typically, this is used in the four-channel mode, corresponding to red, green, blue and alpha (RGBA) data.
+(It is important to note, however, that this is not by any means the only mechanism that these could be assigned; the values are accumulated in floating point and could correspond to any output data, not just these three colors and one alpha.)
+In six-channel mode, typically the channels are for red, green, blue, and a corresponding alpha channel for each of those colors, accumulated independently.
+
+The transfer function is set up around the concept of "field interpolation tables."
+These are 1D arrays, typically 256 elements, that include floating point values as well as concrete bounds in data-space.
+These tables provide a mapping $f(v) \rightarrow u$, where $v$ is a local field value.
+Careful construction of these tables can produce volume renderings via isocontours, where specific values in field space are highlighted with distinct colors.
+Indeed, this is the most common method of applying this sampler, as it allows a straightforward way of seeing "through" the outer layers and viewing nesting structures simultaneously.
+
+
+**Insert transfer function figure here**
 
 ### Hardware-accelerated Volume Rendering
 
