Add sampling function stuff

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -146,12 +146,25 @@ In six-channel mode, typically the channels are for red, green, blue, and a corr
 
 The transfer function is set up around the concept of "field interpolation tables."
 These are 1D arrays, typically 256 elements, that include floating point values as well as concrete bounds in data-space.
-These tables provide a mapping $f(v) \rightarrow u$, where $v$ is a local field value.
+These tables provide a mapping $f(v) \rightarrow u$, where $v$ is a local field value, as well as an optional "weight" value drawn from a second table.
 Careful construction of these tables can produce volume renderings via isocontours, where specific values in field space are highlighted with distinct colors.
 Indeed, this is the most common method of applying this sampler, as it allows a straightforward way of seeing "through" the outer layers and viewing nesting structures simultaneously.
 
+We use notation $C_i^0$ for the input values for a given channel (where $i$ is one of $R, G, B, A$) and $C_i^1$ for the output.
+With the sampled field value ($f(t)$) and optional weight field value ($w(t)$) we can then define a sample, $S_i$ for each channel including alpha.
+we compute the updated values for each sampling point via:
 
-**Insert transfer function figure here**
+$$
+C_i^0
+a_t \leftarrow \mathrm{max}(1 - dt * S_A, 0) \\
+C_i^1 \leftarrow S_i \delta t + a_t C_i^0
+$$
+
+This is the case for "grey" opacity.
+In the use case of differing opacity for each channel, we modify this such that we utilize additional alpha channels for each primary channel.
+$a_t$ is then defined individually for each output channel.
+
+This particular set of transfer functions, with what amounts to multi-channel, multi-field sampling in both output and opacity, can be specified to perform complex functions such as variable scattering, different weights for different channels, etc.
 
 ### Hardware-accelerated Volume Rendering
 
