Fix citation now that DOI resolution is fixed

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -64,7 +64,7 @@ In some cases, an inverse function can be provided, which in some cases enables 
 #### Patch-based ray traversal
 
 Unlike taking standard "projections" of datasets, the process of volume rendering requires that elements be traversed in order, accumulating values that may be reliant on *previous* values.
-While this is straightforward to implement for grids (CITE A&W 1987), in situations where there are overlapping sets of values the process must be handled more carefully.
+While this is straightforward to implement for grids [@doi:10.2312/egtp.19871000], in situations where there are overlapping sets of values the process must be handled more carefully.
 
 <canvas id="vrFigure" style="width:100%;height:100%;min-height: 500px;" hidpi="true"></canvas>
 <script type="text/paperscript" canvas="vrFigure" src="images/volume_rendering/vr-figure.js"></script>
