adjust the template a bit

--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -12,8 +12,12 @@ This template sets out the frontend information drawn from frontends.yaml.
 
 **Comments:** {{frontend.comments}}
 
-**Primary Citations:** [{{ frontend.citations | join("; ") }}
+{% if frontend.citations | length > 0 %}
+**Primary Citations:** [{{ frontend.citations | join("; ") }}]
+{% endif %}
 
-**Usage Citations:** [{{ frontend.usage_citations | join("; ") }}
+{% if frontend.usage_citations | length > 0 %}
+**Usage Citations:** [{{ frontend.usage_citations | join("; ") }}]
+{% endif %}
 
 {% endfor %}
