--- a/content/21.data_object_subsections.md
+++ b/content/21.data_object_subsections.md
@@ -282,13 +282,13 @@ corresponds to a unitless measurement along the ray from start to end.
 This surface object identifies isocontours on a cell-by-cell basis,
 with no consideration of global connectedness, and returns the
 vertices of the Triangles in that isocontour.  This object simply
-returns the vertices of all the triangles calculated by the `marching
-cubes <https://en.wikipedia.org/wiki/Marching_cubes>`_ algorithm; for
+returns the vertices of all the triangles calculated by the [marching
+cubes](https://en.wikipedia.org/wiki/Marching_cubes) algorithm; for
 more complex operations, such as identifying connected sets of cells
 above a given threshold, see the extract_connected_sets function.
 This is more useful for calculating, for instance, total isocontour
-area, or visualizing in an external program (such as `MeshLab
-<http://www.meshlab.net>`_.)  The object has the properties .vertices
+area, or visualizing in an external program (such as
+[MeshLab](http://www.meshlab.net).)  The object has the properties .vertices
 and will sample values if a field is requested.  The values are
 interpolated to the center of a given face.
 
