a few minor typos

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -373,12 +373,7 @@ In addition, while the current implementation of this method is designed for thr
 
 ### Code {#sec:code}
 
-These procedures have been implemented as part of the yt Python package [@Turk20d11a] in order to facilitate the analysis of large astrophysical N-body simulations; currently undergoing review for inclusion in a future version of yt (4.0 or later), our implementation is available at https://bitbucket.org/langmm/yt-bitmap.
-**NOTE: This use to say "3.4 or later". Now it's pretty clear this section is a bit dated. Hasn't the bitmap stuff been merged by now ?**
+These procedures have been incorporated into yt as of version 4.0, but then as of version 4.2 have been extracted into a standalone package entitled [`ewah-bool-utils`](https://pypi.org/project/ewah-bool-utils/).
+It is our hope that this will expand its application to non-yt uses.
 The open source EWAHBoolArray C++ package is used for implementing EWAH bitmaps [@Lemire2010; @Kaser2016] and exposed to Python using Cython [@Behnel2011].
-
-### Acknowledgment {#acknowledgment .unnumbered}
-
 The authors would like to thank Daniel Lemire for his open source EWAH implementation.
-yt is developed by a large number of independent researchers from numerous institutions around the world.
-Their commitment to open science has helped make this work possible.
