--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -81,7 +81,7 @@ To obtain on-disk data, a user need only query a data object using an on-disk fi
 Here, the first data object query is returned in code units, while the second is returned in CGS units.
 This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field.
 
-### Implementation} {#sec:units_implementation}
+### Implementation {#sec:units_implementation}
 
 Our unit system has 6 base dimensions, `mass`, `length`, `time`, `temperature`, and `angle`.
 The unitless `dimensionless` dimension, which we use to represent scalars is also technically a base dimension, although a trivial one.
