Start explaining some basics of SPH

--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -1,4 +1,4 @@
-## Data Formats and Frontends
+## Data Formats and Frontends {#sec:data_formats_and_frontends}
 
 {##
 This template sets out the frontend information drawn from frontends.yaml.
