Update SPH section and add Alex as author

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -90,7 +90,7 @@ Smoothed Particle Hydrodynamics (SPH) is a commonly-used method for solving equa
 This provides many advantages over grid-based discretizations, but also poses somewhat different challenges for analysis and visualization.
 While a full description of SPH is outside the scope of this paper, there are a handful of crucial and important pieces of information that we will review.
 For more information, we refer interested readers to this comprehensive review of Smoothed Particle Hydrodynamics by Volker Springel [@doi:10.1146/annurev-astro-081309-130914] or to the SPLASH method paper by Daniel Price [@doi:10.1071/AS07022].
-SPH defines field quantities *at* a set of moving points, and field values themselves can be computed by integrating over all the elements in the domain using a special-purpose kernel.
+SPH defines field quantities *at* a set of moving points, and field values at any point (i.e., between the points) can be computed by integrating over all the elements in the domain using a special-purpose kernel; this method is an exact interpolation between the discretized points by applying the smoothing kernel.
 Formally, this is represented as:
 $$
 A(\mathbf{r}) = \int A(\mathbf{r}')W(|\mathbf{r} - \mathbf{r}'|,h)\mathrm{d}V(\mathbf{r}')
@@ -102,10 +102,16 @@ $$
 In these equations, $A$ is the field, W is the weighting function (the 'kernel') and $h$ is the smoothing length.
 (One important note is that for various reasons, the smoothing length and the 'half' smoothing length are often used in different contexts in SPH; this is something to keep in mind, as variable names such as `hsml` may in fact refer to 'half-smoothing length.')
 By choosing a smoothing kernel that terminates outside of a given radius, this can be restricted to a finite subset of the number of particles in the simulation, and provide a natural adaptivity in resolution.
+One common approach is to define the field values in terms of the N nearest neighboring particles; often this is a power of two, such as 32 or 64, which can be identified using a spatial search such as a kD-tree.
 There are other formulations of SPH as well that confine the integral to a fixed number of particles, that evaluate based on pressure criteria, and so forth.
+
+In general, there are two approaches to defining the finite set of particles that contribute to a field at a given point.
+In "scatter" methods, computing a field at a given point is conducted by iterating over particles and identifying those whose smoothing length overlaps with a given point.
+In the alternate method "gather," the outer and inner loops of the algorithm are essentially swapped; for every point at which a field value is sought, the local smoothing length is computed and then all particles within that smoothing length are used in the computation.
 
 For the purposes of *post-processing* analysis and visualization, the most important criteria for applying SPH to a set of particles are to ensure that the function that computes field values at a given location is *identical* to that used inside the simulation code (or as close as possible) and that the calculations are conducted in as short a time as possible.
 This set of dual requirements has led to yt implementing a flexible system for defining the smoothing kernel used, whether or not a normalization step is applied to SPH quantities, and the option to use either "scatter" or "gather" methods for computing field values at fixed locations.
+
 
 Previous versions of `yt` provided analysis of SPH data through a hybrid approach that mixed pure-SPH analysis with octree-based gridding and indexing that used particle density as a guide for the necessary resolution.
 Although the present, yt 4.0 series does not utilize octrees for particles, a description of the previous implementation is useful to provide both historical information and modern motivation for the "demeshening" initiative that led to the current code base.
