starting sustainability section

--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -1,1 +1,23 @@
 ## Sustainability {#sec:sustainability}
+
+When discussing software projects, "Sustainability" is a complex, expansive topic that typically means different things to different people.
+A number of different definitions have been proposed -- ranging from pragmatic descriptions of responsivity to bug reports or changing hardware, to more idealistic descriptions of active development and ever-increasing functionality.
+For the purposes of describing yt's approach to sustainability, we will use these as path markers but not restrictions.
+
+yt is supported through both peer-production and grant-funded development.
+At times, this can pose challenges; the requirements imposed by grant-funded development naturally concentrates decision making, but within the yt community we have (so far) navigated this through deep engagement in community processes and interaction.
+However, at the risk of belaboring a point that has been well-explored elsewhere, grant-funded development has traditionally focused on "new" or "innovative" development, rather than maintenance of a software project.
+
+A tension exists, however, between support of an existing project and the support of new projects in an ecosystem.
+By supporting an existing project, resources can tend to become concentrated; conversely, if a project supports a broader research agenda, that resource concentration can result in greater effort-multipliers for individuals who utilize the project.
+We're aware of this tension in yt; in fact, while yt has been grant-supported, most of the grant development has gone to a very few number of groups.
+This grant funding has been provided through the National Science Foundation, the Gordon and Betty Moore Foundation, the Department of Energy, the Chan Zuckerberg Initiative and other sources. [@doi:10.6084/m9.figshare.2061465.v1, [@doi:10.6084/m9.figshare.909413.v1], [@doi:10.5281/zenodo.4158589].
+Grants have supported the development of new features, including specific functionality for analysis routines and support for non-astronomical domains.
+
+Into each of these grants has been explicit support for community building, constituted by the development of documentation, videos, and tutorials, as well as mentoring of new contributors and shepherding the growth of the project through code review and issue management.
+While this does provide support for individuals who can provide dedicated, thoughtful attention to code review and bug reports, it is, quite frankly, insufficient without the engagement of non-funded community members who contribute their time and energy.
+
+ - The python ecosystem isn't stagnant, or even slow-moving.
+ - yt has to keep up with new formats and new sizes of data.
+ - different types of tasks have different engagement levels from people
+ - "fun"-driven sustainability
