--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -17,7 +17,55 @@ Grants have supported the development of new features, including specific functi
 Into each of these grants has been explicit support for community building, constituted by the development of documentation, videos, and tutorials, as well as mentoring of new contributors and shepherding the growth of the project through code review and issue management.
 While this does provide support for individuals who can provide dedicated, thoughtful attention to code review and bug reports, it is, quite frankly, insufficient without the engagement of non-funded community members who contribute their time and energy.
 
- - The python ecosystem isn't stagnant, or even slow-moving.
- - yt has to keep up with new formats and new sizes of data.
- - different types of tasks have different engagement levels from people
- - "fun"-driven sustainability
+There are a number of avenues of development for yt, each of which draws different degrees of interest, urgency, and breadth of engagement.
+A few of these are worth highlighting.
+
+### Platform Functionality
+
+Improving and developing the functionality of yt as a whole is a particular focus for investment of time and resources.
+Typically, this is conducted via one of two avenues; the first is through explicit, funded development done for specific use cases.
+The second mode of functionality development is when community members (either those who are already participants in the community or those who seek to) identify a feature that meets their particular use case, and work to develop it.
+
+Community contributions usually fall into one of two categories -- new functionality (such as supporting new datasets, applying new operations to datasets) or by scaling or improving the performance of yt for a use case or in general.
+The former is more common than the latter, although both have occurred.
+Expanding the featureset of yt tends to be more attractive than optimization for a large swath of the userbase; in some sense, optimization opens new avenues for scientific exploration (by taking formerly out-of-reach options and placing them within the realm of reasonable execution time), but adding new features certainly does.
+
+A few examples of new functionality provided by community members include the volume rendering of octree datasets, support for new code frontends (such as AREPO), and many of the analysis modules.
+New functionality provided by funded development has included long-term improvements such as the "demeshening" of particle datasets and support for non-astrophysical domains.
+A few notable improvements to the efficiency and scalability of yt include multi-level parallelism operations and the initial implementation of dask as an array backend.
+
+In general, we have found it difficult to move through large upheavals of code without large-scale effort on the part of the community.
+This has resulted in a reluctance to investigate particularly invasive changes, and can provide a distortion of the cost/benefit analysis, leaning toward risk aversion.
+The YTEP process mitigates this somewhat, but also provides additional opportunities for a 'veto' that can dampen enthusiasm and impede development.
+At the same time, the safe guards provided by this can help to ensure stability for the community, particularly those not actively engaged in development.
+
+### Ecosystem Maintenance
+
+yt exists inside a larger ecosystem of packages and infrastructure, composed of the Python language, the Scientific Python community, as well as the computational science communities (predominantly astrophysics).
+Each of these communities, much like yt itself, has its own set of priorities, needs, and development schedules.
+Changes in systems that yt depends on may require changes in yt; changes in what other systems expect from yt may likewise require changes in yt.
+
+One of the more notable shifts in recent years has been in how python libraries and applications are distributed.
+At the time of the first yt method paper (which, granted, is more than a decade prior to this one) yt was distributed typically in source form with its entire dependency stack to provide a uniform experience on supercomputer installations.
+This was, at the time, "necessary" because Python was not as widely used in the computational science and astrophysics communities as it is now, and the versions of various libraries were often far out of date.
+In the intervening time, however, a number of shifts have occurred, including the advent of conda (and conda-forge), wheels, wide-scale adoption of python in the scientific community, and considerable standardization and improvement of package metadata and installation methods.
+Ensuring yt maintains compatibility with the modern package ecosystem has taken, at times, a fairly-large degree of effort on the part of the developers *making* the changes and the developers who intend to continue developing.
+
+In addition to the changes in yt *necessitated* by changes to packaging or updates in APIs or behavior, there are also those changes that are necessary to conform to community norms.
+For example, utilizing code formatting tools, automated "linting" and other automated methods of applying "quality control" to incoming changesets.
+Or, somewhat more invasively, inserting "type hints" that can provide automated analysis and inline suggestions within integrated development environments.
+These developments may not provide as much value to long-time developers, but can be important for newcomers who are less familiar with the library or coding conventions.
+The balance with these changes can be difficult to strike, to minimize disruption to existing developers and users while still expanding the accessibility of the library to others.
+
+### Enjoyment Maximization
+
+Another aspect of sustainability is that for many people, developing software can be *fun*.
+This is certainly true for many members of the yt community -- sometimes in ways that align with the goals and requirements of academic research, and sometimes in ways that do not directly advance those goals.
+For instance, the initial development of the software volume renderer was not aligned with immediate research goals, but it has gone on to support synthetic observations and to foster much broader research and education opportunities.
+
+While development for the joy of developing can be an exciting and helpful process, it is also something that can require a delicate balance of attention and engagement from the rest of the community.
+Accepting changes into the yt codebase requires careful review, and dedication of resources (real and intellectual) that may already be allocated elsewhere.
+
+Furthermore, not everyone derives pleasure from the same types of development.
+Some individuals love to build new things and scaffold out plugins or visualization types; others have great satisfaction from optimization or documentation.
+Accepting and supporting these different types of development is critical for a community built on respect, trust and gratitude.
