Add bugfixes and mention of bots

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -196,6 +196,9 @@ Effort is underway to enable using `mypy` for the specialized task of type check
 All changes that can be applied via automation (specifically, code formatting) are accessible from within the GitHub pull request interface, and are again provided by [pre-commit.ci](https://pre-commit.ci).
 This allows drive-by contributions to have their pull requests updated inline by an automated process, reducing the need to manually install packages to apply the changes.
 
+We note that in @doi:10.1109/icsme46990.2020.00011 evidence is presented that code review bots can lead to a reduction in rejected pull requests, as well as decreased communication among developers.
+While yt is not necessarily the perfect laboratory for this, as the project as a whole does not have an extensive history of declining pull requests, we have anecdotally noted that discussion around 'code nits' and stylistic issues has been considerably reduced, leading to what developers describe as expedited pull requests.
+
 ### Type Hinting
 
 Code included in ``yt`` is not required to utilize [type hinting](https://docs.python.org/3/library/typing.html).
