--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -39,6 +39,20 @@ This has resulted in a reluctance to investigate particularly invasive changes, 
 The YTEP process mitigates this somewhat, but also provides additional opportunities for a 'veto' that can dampen enthusiasm and impede development.
 At the same time, the safe guards provided by this can help to ensure stability for the community, particularly those not actively engaged in development.
 
+### Project Maintenance
+
+In addition to development of new features, the correction of problems or updates to old behavior are also critical to the sustained usage and applicability of a project.
+In this category of "bug fixes" we certainly include faults or problems with yt itself, but it's also important to note that in many cases, we can also use this category to describe improvements in behavior that bring the results greater accuracy or precision.
+
+It is tough to estimate the cost of bug fixes, in terms of labor or in terms of community member attrition, but @doi:10.1007/s11219-021-09564-z suggests that large, established projects on github may spend up to 40% of their time on bugfixes rather than new features.
+While we have not been able to verify this, examining the cadence of bug fix releases versus new feature releases suggests that this is indeed the case for yt as well.
+
+Maintenance and bug fixes are critical to developing yt as a community-focused code.
+The damage that can be done by ignoring a bug report, dismissing a suggestion, or outright rejecting proposed fixes is real, and can have measurable impact on community cohesion and growth.
+As such, in the yt development process we strive to be as accommodating and welcoming as possible, while still balancing that against the very real costs that responding to bug fixes, feature requests, and providing helpful insight with issues that may be covered by the documentation or that are known bugs.
+This is a challenge, and one that benefits from having dedicated maintainers, or at least dedicated maintenance time from the developer community.
+Furthermore, we have found that regular, collaborative co-working sessions can ease this burden, although they occasionally veer into too light of code review or constant reiteration of "standing" issues.
+
 ### Ecosystem Maintenance
 
 yt exists inside a larger ecosystem of packages and infrastructure, composed of the Python language, the Scientific Python community, as well as the computational science communities (predominantly astrophysics).
