--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -10,7 +10,7 @@ However, at the risk of belaboring a point that has been well-explored elsewhere
 
 A tension exists, however, between support of an existing project and the support of new projects in an ecosystem.
 By supporting an existing project, resources can tend to become concentrated; conversely, if a project supports a broader research agenda, that resource concentration can result in greater effort-multipliers for individuals who utilize the project.
-We're aware of this tension in yt; in fact, while yt has been grant-supported, most of the grant development has gone to a very few number of groups.
+We're aware of this tension in yt; in fact, while yt has been grant-supported, most of the grant development has gone to a very small number of groups.
 This grant funding has been provided through the National Science Foundation, the Gordon and Betty Moore Foundation, the Department of Energy, the Chan Zuckerberg Initiative and other sources. [@doi:10.6084/m9.figshare.2061465.v1, [@doi:10.6084/m9.figshare.909413.v1], [@doi:10.5281/zenodo.4158589].
 Grants have supported the development of new features, including specific functionality for analysis routines and support for non-astronomical domains.
 
