--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -78,7 +78,7 @@ This is certainly true for many members of the yt community -- sometimes in ways
 For instance, the initial development of the software volume renderer was not aligned with immediate research goals, but it has gone on to support synthetic observations and to foster much broader research and education opportunities.
 
 While development for the joy of developing can be an exciting and helpful process, it is also something that can require a delicate balance of attention and engagement from the rest of the community.
-Accepting changes into the yt codebase requires careful review, and dedication of resources (real and intellectual) that may already be allocated elsewhere.
+Accepting changes into the yt codebase requires careful review, and dedication of resources (physical and intellectual) that may already be allocated elsewhere.
 
 Furthermore, not everyone derives pleasure from the same types of development.
 Some individuals love to build new things and scaffold out plugins or visualization types; others have great satisfaction from optimization or documentation.
