--- a/content/70.sustainability.md
+++ b/content/70.sustainability.md
@@ -62,7 +62,7 @@ Changes in systems that yt depends on may require changes in yt; changes in what
 One of the more notable shifts in recent years has been in how Python libraries and applications are distributed.
 At the time of the first yt method paper, yt was distributed typically in source form with its entire dependency stack to provide a uniform experience on supercomputer installations.
 This was, at the time, "necessary" because Python was not as widely used in the computational science and astrophysics communities as it is now, and the versions of various libraries were often far out of date.
-In the intervening time, however, a number of shifts have occurred, including the advent of conda (and conda-forge), wheels, wide-scale adoption of python in the scientific community, and considerable standardization and improvement of package metadata and installation methods.
+In the intervening time, however, a number of shifts have occurred, including the advent of conda (and conda-forge), wheels, wide-scale adoption of Python in the scientific community, and considerable standardization and improvement of package metadata and installation methods.
 Ensuring yt maintains compatibility with the modern package ecosystem has taken, at times, a fairly-large degree of effort on the part of the developers *making* the changes and the developers who intend to continue developing.
 
 In addition to the changes in yt *necessitated* by changes to packaging or updates in APIs or behavior, there are also those changes that are necessary to conform to community norms.
